# skimr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: digest.yml
data/: digest.db  profile.yaml  profile.yaml.example  sources.yaml  sources.yaml.example
pipeline/: config.py  db.py  main.py
pipeline/llm/: classify.py  client.py  schemas.py  score.py  summarize.py
pipeline/render/: markdown.py
pipeline/sources/: base.py  searchapi.py  youtube.py
pipeline/utils/: logging.py  slugs.py
scripts/: init_db.py  manual_run.sh  model_bakeoff.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/components/: ItemCard.astro  ThemeChip.astro  ThemeFilter.astro
site/src/content/: config.ts
site/src/content/items/: 2026-04-24-dwarkesh-patel-nvidia-s-missed-opportunity-jensen-huang.md  2026-04-24-nate-b-jones-claude-design-does-in-30-minutes-what-your-team-does-in.md  2026-04-25-dwarkesh-patel-nvidia-can-make-ai-labs-2x-faster-jensen-huang.md  2026-04-25-nate-b-jones-chatgpt-images-just-replaced-three-people-on-your-team.md  2026-04-25-nate-b-jones-experienced-developers-took-19-longer-with-ai-aicoding-s.md  2026-04-25-nate-b-jones-strongdm-s-three-person-team-ships-with-zero-human-code.md  2026-04-26-dwarkesh-patel-nvidia-s-real-moat-jensen-huang.md  2026-04-26-nate-b-jones-apple-just-positioned-itself-for-the-next-trillion-dolla.md  2026-04-27-dwarkesh-patel-what-this-florence-bridge-reveals-about-tyranny-ada-pa.md  (+14 more)
site/src/layouts/: BaseLayout.astro
site/src/pages/: index.astro
site/src/styles/: global.css
(+4 files in other folders)
